maze.lessons.maze.island.IslandMaze.scala.error
Escaper:8: error: '=' expected but identifier found.
def toTheNorthFriends!() {
                     ^Escaper:17: error: illegal start of simple expression
def searchLeft() {
^